# dualcube-essential

./: .gitignore  CMakeLists.txt  DualCube.c  DualCube.cpp  DualCubeMath.ipynb  README.md  info.c  machine_id.c  main.c  md5.c  post.c
.github/workflows/: cmake-single-platform.yml
